# odin

./: .gitignore  Cargo.toml  README.md  build.rs
examples/newsyslog/: odin.conf  supper.conf
examples/rc.d/: odin  supper
examples/services/: hello.toml  web.toml
packaging/freebsd/: +DISPLAY  +MANIFEST  +POST_INSTALL  +PRE_INSTALL  build.sh
packaging/freebsd/files/newsyslog/: odin.conf
packaging/freebsd/files/rc.d/: odin
src/: child.rs  config.rs  control.rs  error.rs  health.rs  labels.rs  lib.rs  logging.rs  main.rs  privileges.rs  service.rs  status.rs  supervisor.rs
tests/: integration_supervision.rs  privilege_drop.rs
