[package]
name = "odin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
humantime-serde = "1"
nix = { version = "0.30", features = ["signal", "process", "user", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
time = { version = "0.3", features = ["parsing"] }
